# turbocop

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  AGENTS.minimal.md  CLAUDE.md  Cargo.toml  Dockerfile.agent  OPTIMIZATION_IDEAS.md  PERF_ANALYSIS.md  PLAN.md  PLAN2.md  PROGRESS.md  README.md  TODO.md  full  mise.toml  pyproject.toml
.devcontainer/: README.md  devcontainer.json  docker-compose.yml  kap.toml  setup.sh
.githooks/: commit-msg  pre-commit
.kilocode/: setup-script
bench/: autocorrect_validate.md  bench.rs  bench.sh  compare.rb  conform.sh  quick_results.md  report.rb  results.md  run.sh  setup.sh  update_rubocop_deps.rb
corpus/: README.md  add_repos.py  baseline_rubocop.yml  diff_results.py  manifest.jsonl
docs/: ARCHITECTURE_ALTERNATIVES_FEEDBACK_DETAILED.md  ARCHITECTURE_ALTERNATIVES_FEEDBACK_HIGH_LEVEL.md  AUTOCORRECT_COPS.md  AUTOCORRECT_PLAN.md  CI_PLAN.md  CLI_CONFORMANCE.md  CORPUS_PLAN.md  FUTURE_IDEAS.md  IDEAS.md  KILO_AGENT_DISPATCH.md  LINT_PLAN.md  LUA_CUSTOM_COPS.md  OPTIMIZATION_IDEAS.md  PLAN.md  RUBYGEM_PLAN.md  TODO.md  TODO_COP_COVERAGE.md  TODO_EXCLUDED_COPS.md  TODO_STREAMING_PROGRESS.md  TODO_conformance.md  YAML_PERF.md  agent-ci.md  agent-dispatch-minimax.md  agent-dispatch.md  bench_repo_candidates.md  check-cop-issue.md  cop_coverage.md  corpus-fp-investigation.md  corpus-workflow.md  corpus.md  corpus_extended.md  (+9 more)
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: all_cops.rs  annotation_comment.rs  directive_parsing.rs  parse_source.rs
fuzz/seeds/fuzz_all_cops/: crash-be7c898f3fb7aaa578f48e6377be0c25eaba9c64
(+4122 files in other folders)
