[package]
name = "rblint"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[[bin]]
name = "rblint"
path = "src/main.rs"

[dependencies]
ruby-prism = "1.7"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yml = "0.0.12"
rayon = "1.11"
ignore = "0.4"
globset = "0.4"
anyhow = "1.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
